# lgcns-mlops-practice

./: .gitignore  batch_prediction.py  pyproject.toml  service.py  train.py
data/storage/: house_rent_test_features.csv  house_rent_train_features.csv
predictions/: 20240328_rent_prediction.csv
src/: preprocess.py
src/common/: logger.py
